src/App.module.css
@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');

/* ======== < LAYOUT > ======== */

.layout {
  display: grid;
  grid-template-columns: 100%;
  grid-template-rows: auto 1fr;
  justify-items: center;
  width: 100%;
  height: 100vh;
  color: #40403e;
  background-color: #f2f0d5;
  font-family: 'Roboto', sans-serif;
  overflow-y: auto;
}

.header {
  height: 200px;
}

.main {
  box-sizing: border-box;
  width: 100%;
  padding: 0 30px;
  display: grid;
  grid-auto-rows: max-content;
  grid-template-columns: 100%;
  gap: 100px;
  justify-items: center;
  padding-bottom: 30px;
}

/* ======== < CONTENT > ======== */

.title {
  font-size: 38px;
  font-weight: bold;
  text-align: center;
}

.inputContainer {
  position: relative;
}

.dollarSign {
  position: absolute;
  left: 15px;
  top: 50%;
  transform: translateY(-50%);
  color: #6b696a;
  font-size: 32px;
}

.input {
  width: 100%;
  box-sizing: border-box;
  padding: 10px 20px 10px 42px;
  color: inherit;
  border: none;
  border-radius: 5px;
  font-family: inherit;
  font-size: 32px;
  outline: none;
}

.input::placeholder {
  color: #6b696a;
}

/* ======== < RESULT > ======== */

.result {
  width: 100%;
  display: grid;
  grid-template-columns: repeat(auto-fit, 150px);
  justify-content: center;
}

.resultCoin {
  display: flex;
  gap: 1rem;
  flex-direction: column;
  align-items: center;
}

.resultCoinImage {
  width: 120px;
}

